add missing fields to responses
- Add labels for all nodes in each pool after cluster created/updated successfully

- ClusterList: createdBy and createdAt

- ClusterDetails: K8S versions, createdBy and createdAt, VPCU and Memory usages for all node

- Deployments: createdAt and namespace

- ApplicationList: createdBy and createdAt

- New endpoint: getApplicationsByCluster

- Update postman collection and OpenAPI
