# main.go
@@ -175,12 +175,13 @@ func main() {
 			//v1.GET("/status", api.Status)
 			orgs.GET("/:orgid/clusters", api.FetchClusters)
 			orgs.GET("/:orgid/clusters/:id", api.GetClusterStatus)
-			orgs.GET("/:orgid/clusters/:id/details", api.FetchCluster)
+			orgs.GET("/:orgid/clusters/:id/details", api.GetClusterDetails)
+			orgs.GET("/:orgid/clusters/:id/application", api.GetApplicationsByCluster)
 			orgs.PUT("/:orgid/clusters/:id", api.UpdateCluster)
 			orgs.PUT("/:orgid/clusters/:id/posthooks", api.ReRunPostHooks)
 			orgs.POST("/:orgid/clusters/:id/secrets", api.InstallSecretsToCluster)
 			orgs.DELETE("/:orgid/clusters/:id", api.DeleteCluster)
-			orgs.HEAD("/:orgid/clusters/:id", api.FetchCluster)
+			orgs.HEAD("/:orgid/clusters/:id", api.ClusterHEAD)
 			orgs.GET("/:orgid/clusters/:id/config", api.GetClusterConfig)
 			orgs.GET("/:orgid/clusters/:id/apiendpoint", api.GetApiEndpoint)
 			orgs.GET("/:orgid/clusters/:id/nodes", api.GetClusterNodes)
